@@ -22,8 +22,9 @@ java {
 allprojects {
 
 	tasks.withType(JavaCompile) {
-//        	options.compilerArgs.addAll(['--add-exports', 'java.base/java.lang.reflect=ALL-UNNAMED'])
+//        	options.compilerArgs.addAll(['--add-exports', 'java.base/java.lang.reflect=ALL-UNNAMED', '--enable-preview'])
 //	        options.compilerArgs.addAll(['--add-exports', 'jdk.unsupported/sun.misc=ALL-UNNAMED'])
+        	options.compilerArgs.addAll(['--enable-preview'])
 	        options.forkOptions.jvmArgs.addAll( ['--add-opens', 'jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED'] )
 	        options.encoding = 'UTF-8'
 	        options.deprecation = true
